# cv-agent

./: .coverage  .dockerignore  .env.docker.example  .env.example  .gitignore  111.ps1  AGENTS.md  CLAUDE.md  CODE_QUALITY_ASSESSMENT.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start_server.py  tsconfig.json
.claude/: launch.json
alembic/: env.py
app/: main.py
contracts/: resume-layout-templates-v1.json
docs/: CHANGED_FILES.md  CONTRACT.md  FRONTEND_MVP_FEATURES.md  Optimization0705_plan.md  RAG_FINALIZATION.md  agent-architecture.md  agent-capability-layer.md  agent-extension-guide.md  agent-intelligence-improvement-handoff-2026-07-15.md  agent-internal-architecture-v2.md  agent-quality-optimization-plan.md  agent-quality-phase2-resume-generation-report-2026-06-26.md  agent-runtime-optimization-plan-2026-07-05.md  api-ai-code-quality-assessment-2026-07-01.md  api-contract.md  backend-api-contract-test-report.md  backend-architecture-review-refactor-plan-2026-06-04.md  backend-capabilities-for-frontend.md  backend-deployment-guide.md  backend-interface-changes-2026-07-14.md  backend-live-interface-test-results-2026-07-07.md  backend-realworld-flow-test-report-2026-06-13.md  backend-refactor-audit.md  backend-review-report-2026-07-11.md  backend_stronger_0618.md  coding-plan.md  context-persistence-and-canvas-editing-handoff-2026-07-15.md  contract-security-matrix-test-results-2026-07-07.md  coolto_agent_internal_architecture_refactor_plan.md  coolto_frontend_backend_contract_v2.md  copilot-action-contract.md  cv_agent_next_stage_plan.md  deployment.md  (+19 more)
(+1183 files in other folders)
